<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image" />

        <Button
            android:id="@+id/weather_snapshot_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/text_weather" />

        <CheckBox
            android:id="@+id/cse_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/text_cse_fence" />

        <CheckBox
            android:id="@+id/hub_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/text_hub_fence" />

        <CheckBox
            android:id="@+id/kne_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/text_kne_fence" />

        <CheckBox
            android:id="@+id/sav_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/text_sav_fence" />

        <CheckBox
            android:id="@+id/fsh_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/text_fsh_fence" />

        <cse340.sensing.PrependableTextView
            android:id="@+id/update"
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update" />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
